export interface WalletDto {
    id: number;
    userId: number;
    currencyId: number;
    balance: number;
}